fix code smells (#2119)
* fix code smells

* remove tests